Vista 7 - chat especialista
Creación del boceto del chat con el especialista.

--- a/dev/index.html
+++ b/dev/index.html
@@ -104,7 +104,7 @@
             <div class="imagenM">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmicTPTCA93PLVMIEuuZ9rHrBFPs-ajz6iNQ&usqp=CAU">
                 <p>Diego, Tarotista psíquico que brinda orientación precisa y comprensiva. </p>
-                <a href="#">
+                <a href="#"></a>
             </div>
             <div class="imagenM">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQORMmf_hP8nuiqNKA0hely-zOf02P9mxCWLQ&usqp=CAU">
@@ -123,8 +123,24 @@
         <p></p>
     </section>
     <section class="seccion" id="seccion_7">
-        <h2></h2>
-        <p></p>
+        <div class="chat-container">
+            <div class="chat-header">Chat</div>
+            <div class="chat-messages" id="chat-messages">
+                <div class="message sender">
+                    <span class="message-content">Hola, ¿cómo estás?</span>
+                </div>
+                <div class="message receiver">
+                    <span class="message-content">¡Hola! Estoy bien, ¿y tú?</span>
+                </div>
+            </div>
+            <div class="chat-input">
+                <form id="message-form">
+                    <input type="text" id="message" placeholder="Escribe un mensaje...">
+                    <button type="submit" id="send-button">Enviar</button>
+                </form>
+            </div>
+        </div>
+        <script src="js/java.js"></script>
     </section>
     <section class="seccion" id="seccion_8">
         <h2></h2>
