Mejora de la vista 7-Chat
Mejora de los colores de la vista 7 que se compone del chat con el especialista además de los estilos css

--- a/dev/index.html
+++ b/dev/index.html
@@ -124,18 +124,23 @@
     </section>
     <section class="seccion" id="seccion_7">
         <div class="chat-container">
-            <div class="chat-header">Chat</div>
+            <div class="chat-header">Especialista</div>
             <div class="chat-messages" id="chat-messages">
                 <div class="message sender">
                     <span class="message-content">Hola, ¿cómo estás?</span>
                 </div>
                 <div class="message receiver">
-                    <span class="message-content">¡Hola! Estoy bien, ¿y tú?</span>
+                    <span class="message-content">¡Bienvenido/a! Soy tu guía de tarot.</span>
+                    <br>
+                    <br>
+                    <br>
+                    <span class="message-content">Exploraremos las respuestas que buscas.</span>
                 </div>
             </div>
             <div class="chat-input">
                 <form id="message-form">
                     <input type="text" id="message" placeholder="Escribe un mensaje...">
+                    <p></p>
                     <button type="submit" id="send-button">Enviar</button>
                 </form>
             </div>
