cambio boton seccion 6
cambio nombre boton, mejora ambiente de la app

--- a/dev/index.html
+++ b/dev/index.html
@@ -115,7 +115,7 @@
         </div>
     
         <div class="contenedor-botones">
-           <button class="botonD">Devolver</button>
+           <button class="botonD">Chat</button>
        </div>
        <p></p>
         <div class="contenedor-imagen1">
