creacion encabezado seccion 8
se crea el encabezado de la seccion 8

--- a/dev/index.html
+++ b/dev/index.html
@@ -149,8 +149,15 @@
         <script src="js/java.js"></script>
     </section>
     <section class="seccion" id="seccion_8">
-        <h2></h2>
-        <p></p>
+        <div class="container1">
+            <img src="https://cdn-icons-png.flaticon.com/128/867/867882.png">
+            <div class="contenido">
+                <h1>ASTRUM</h1>
+                <center>
+                <p>Sumérgete en el mundo del tarot y descubre su poder para conocerte a ti mismo y a tu futuro.</p>
+                </center>
+            </div>
+        </div>
     </section>
     <section class="seccion" id="seccion_9">
         <h2></h2>
