boceto del cuerpo seccion 8
codigo para generar un boceto cercano al prototipo inicial

--- a/dev/index.html
+++ b/dev/index.html
@@ -158,6 +158,22 @@
                 </center>
             </div>
         </div>
+        <div class="container">
+            <div class="opciones">
+                <div class="opcion">
+                    <h2>Tipo de lectura</h2>
+                    <button type="button">Elegir</button>
+                </div>
+                <div class="opcion">
+                    <h2>Mazo de cartas</h2>
+                    <button type="button">Elegir</button>
+                </div>
+                <div class="opcion">
+                    <h2>Especialista</h2>
+                    <button type="button">Elegir</button>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="seccion" id="seccion_9">
         <h2></h2>
