--- a/dev/index.html
+++ b/dev/index.html
@@ -124,6 +124,15 @@
         <p></p>
     </section>
     <section class="seccion" id="seccion_7">
+        <div class="container1">
+            <img src="https://cdn-icons-png.flaticon.com/128/867/867882.png">
+            <div class="contenido">
+                <h1>ASTRUM</h1>
+                <center>
+                <p>Sumérgete en el mundo del tarot y descubre su poder para conocerte a ti mismo y a tu futuro.</p>
+                </center>
+            </div>
+        </div>
         <div class="chat-container">
             <div class="chat-header">Especialista</div>
             <div class="chat-messages" id="chat-messages">
@@ -162,7 +171,7 @@
             <div class="opciones">
                 <div class="opcion">
                     <h2>Tipo de lectura</h2>
-                    <button type="button">Elegir</button>
+                    <button class="botonD">Chat</button>
                 </div>
                 <div class="opcion">
                     <h2>Mazo de cartas</h2>
