--- a/dev/index.html
+++ b/dev/index.html
@@ -171,15 +171,28 @@
             <div class="opciones">
                 <div class="opcion">
                     <h2>Tipo de lectura</h2>
-                    <button class="botonD">Chat</button>
+                    <select class="botonD select-opcion">
+                        <option value="Pasado">Pasado</option>
+                        <option value="Presente">Presente</option>
+                        <option value="Futuro">Futuro</option>
+                        <option value="Amor">Amor</option>
+                    </select>
                 </div>
                 <div class="opcion">
                     <h2>Mazo de cartas</h2>
-                    <button type="button">Elegir</button>
+                    <select class="botonD select-opcion">
+                        <option value="rider-waite">Rider-Waite</option>
+                        <option value="crowley">Crowley</option>
+                        <option value="marsella">Marsella</option>
+                    </select>
                 </div>
                 <div class="opcion">
                     <h2>Especialista</h2>
-                    <button type="button">Elegir</button>
+                    <select class="botonD select-opcion">
+                        <option value="juan">Juan</option>
+                        <option value="maria">María</option>
+                        <option value="pepe">Pepe</option>
+                    </select>
                 </div>
             </div>
         </div>
