--- a/dev/index.html
+++ b/dev/index.html
@@ -181,17 +181,17 @@
                 <div class="opcion">
                     <h2>Mazo de cartas</h2>
                     <select class="botonD select-opcion">
-                        <option value="rider-waite">Rider-Waite</option>
-                        <option value="crowley">Crowley</option>
-                        <option value="marsella">Marsella</option>
+                        <option value="pc">Pregunta Cerrada</option>
+                        <option value="pa">Pregunta Abierta</option>
+                        <option value="fecha">Fecha</option>
                     </select>
                 </div>
                 <div class="opcion">
                     <h2>Especialista</h2>
                     <select class="botonD select-opcion">
-                        <option value="juan">Juan</option>
-                        <option value="maria">María</option>
-                        <option value="pepe">Pepe</option>
+                        <option value="sofia">Sofia</option>
+                        <option value="diego">Diego</option>
+                        <option value="martin">Martin</option>
                     </select>
                 </div>
             </div>
