creacion boton seccion 8
boton para solicitar interpretacion

--- a/dev/index.html
+++ b/dev/index.html
@@ -195,7 +195,13 @@
                     </select>
                 </div>
             </div>
-        </div>
+            <br>
+            
+            <div class="contenedor-botones">
+                <button class="botonD">Solicitar</button>
+            </div>
+            </div>
+       
     </section>
     <section class="seccion" id="seccion_9">
         <h2></h2>
