botones nav seccion 8
Creacion de botones para la navegacion del usuario en la seccion 8

--- a/dev/index.html
+++ b/dev/index.html
@@ -158,6 +158,12 @@
                 </form>
             </div>
         </div>
+        <br>
+        <br>
+        <div class="contenedor-botones">
+            <button class="botonD">Inicio🏠</button>
+           <button class="botonD">Devolver</button>
+       </div>
         <script src="js/java.js"></script>
     </section>
     <section class="seccion" id="seccion_8">
