--- a/dev/index.html
+++ b/dev/index.html
@@ -220,6 +220,26 @@
                 </center>
             </div>
         </div>
+        <div class="contenido">
+            <h2>Interpretación del Tarot</h2>
+            <p>Tu Eleccion ha sido la siguiente:</p>
+            <p>Tipo de lectura: Presente, Mazo de cartas: Pregunta abierta, Especialista: Diego</p>
+
+        </div>
+        <div class="contenedor-imagenesM img">
+            <a href="#"></a>
+            <div class="imagenM">
+                <img src="https://i.pinimg.com/736x/1d/c0/0e/1dc00e88baf00117bf9ea16d05dea09f.jpg">
+            </div>
+            <div class="imagenM">
+                <img src="https://i.pinimg.com/736x/34/06/03/34060348caf1b683d9b3a82eb204a1e5.jpg">
+            </div>
+            <div class="imagenM">
+                <img src="https://i.pinimg.com/736x/fb/a5/98/fba59820e265358f2a62b7461969f767.jpg">
+            </div>  
+        </div>
+        <p>Estas cartas sugieren que estás en un período de elecciones y cambios en tu vida amorosa. Te animan a seguir tu intuición, nutrir tus relaciones con amor y afrontar los cambios con confianza en que todo forma parte de tu camino de crecimiento personal.
+        </p>
     </section>
 </body>
 </html>
