--- a/dev/index.html
+++ b/dev/index.html
@@ -237,11 +237,12 @@
                 <img src="https://i.pinimg.com/736x/fb/a5/98/fba59820e265358f2a62b7461969f767.jpg">
             </div>  
         </div>
-        <p>Estas cartas sugieren que estás en un período de elecciones y cambios en tu vida amorosa. Te animan a seguir tu intuición, nutrir tus relaciones con amor y afrontar los cambios con confianza en que todo forma parte de tu camino de crecimiento personal.En el cruce de decisiones, confía en tu intuición y elige desde el corazón, pues el destino gira en una rueda de oportunidades guiada por el amor y la sabiduría femenina.
+        <p>Estas cartas sugieren que estás en un período de elecciones y cambios en tu vida amorosa. Te animan a seguir tu intuición, nutrir tus relaciones con amor y afrontar los cambios con confianza en que todo forma parte de tu camino de crecimiento personal.En el cruce de decisiones, confía en tu intuición y elige desde el corazón.
         </p>
+        <center><button class="botonD"><a href="#seccion_5">Devolver</a></button></center>
         <br>
         <footer class="footer">
-                    <h3>¡Descubre tu destino hoy!</h3>
+                    <h5>¡Descubre tu destino hoy!</h5>
         </footer>
     </section>
 </body>
