barra desplazamiento chat
se adecua el chat en la seccion

--- a/dev/index.html
+++ b/dev/index.html
@@ -146,22 +146,23 @@
                     <span class="message-content">Exploraremos las respuestas que buscas.</span>
                 </div>
             </div>
-            <div class="chat-input">
-                <form id="message-form">
-                    <input type="text" id="message" placeholder="Escribe un mensaje...">
-                    <br>
-                    <br>
-        
-                    <button type="submit" id="send-button">Enviar</button>
-                </form>
+            <div class="scrollable-chat">
+                <div class="chat-input">
+                    <form id="message-form">
+                        <input type="text" id="message" placeholder="Escribe un mensaje...">
+                        <br>
+                        <br>
+                        <button type="submit" id="send-button">Enviar</button>
+                    </form>
+                </div>
             </div>
         </div>
         <br>
         <br>
         <div class="contenedor-botones">
             <button class="botonD"><a href="#seccion_1">Inicio🏠</a></button>
-           <button class="botonD"><a href="#seccion_6">Devolver</a></button>
-       </div>
+            <button class="botonD"><a href="#seccion_6">Devolver</a></button>
+        </div>
         <script src="js/java.js"></script>
     </section>
     <section class="seccion" id="seccion_8">
@@ -242,7 +243,7 @@
         <center><button class="botonD"><a href="#seccion_5">Devolver</a></button></center>
         <br>
         <footer class="footer">
-                    <h5>¡Descubre tu destino hoy!</h5>
+            <h5>¡Descubre tu destino hoy!</h5>
         </footer>
     </section>
 </body>
