--- a/dev/index.html
+++ b/dev/index.html
@@ -11,9 +11,33 @@
         <h2></h2>
         <p></p>
     </section>
-    <section class="seccion" id="seccion_2">
-        <h2></h2>
-        <p></p>
+    <section class="seccion" id="seccion_2"> 
+        <div class="Crear">
+            <h1>Crear Cuenta de Usuario</h1>
+            <img src="img/logo.png" alt="">
+        </div>        
+        <div class="registro-container">
+            <h2>Registro de Usuario</h2>
+            <form action="procesar_registro.php" method="post">
+                <div class="input-group">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                </div>
+                <div class="input-group">
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="input-group">
+                    <label for="contrasena">Contraseña:</label>
+                    <input type="password" id="contrasena" name="contrasena" required>
+                </div>
+                <div class="input-group">
+                    <label for="confirmar_contrasena">Confirmar Contraseña:</label>
+                    <input type="password" id="confirmar_contrasena" name="confirmar_contrasena" required>
+                </div>
+                <button type="submit">Registrarse</button>
+            </form>
+        </div>
     </section>
     <section class="seccion" id="seccion_3">
         <h2></h2>
