--- a/dev/index.html
+++ b/dev/index.html
@@ -12,12 +12,18 @@
         <p></p>
     </section>
     <section class="seccion" id="seccion_2"> 
-        <div class="Crear">
-            <h1>Crear Cuenta de Usuario</h1>
-            <img src="img/logo.png" alt="">
-        </div>        
+        <div class="header1">
+            <div class="logo">
+                <img src="img/logo.png" alt="">
+            </div>
+            <div class="crear">
+                <h1>Crear Usuario</h1>
+            </div>
+        </div>
+        <br>            
         <div class="registro-container">
-            <h2>Registro de Usuario</h2>
+            <h2></h2>
+            
             <form action="procesar_registro.php" method="post">
                 <div class="input-group">
                     <label for="nombre">Nombre:</label>
@@ -40,8 +46,20 @@
         </div>
     </section>
     <section class="seccion" id="seccion_3">
-        <h2></h2>
-        <p></p>
+        <div class="login-container">
+            <h2>Iniciar Sesión</h2>
+            <form action="procesar_login.php" method="post">
+                <div class="input-group">
+                    <img src="usuario_icono.png" alt="Icono de Usuario" class="icono">
+                    <input type="text" id="usuario" name="usuario" placeholder="Usuario" required>
+                </div>
+                <div class="input-group">
+                    <img src="contrasena_icono.png" alt="Icono de Contraseña" class="icono">
+                    <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
+                </div>
+                <button type="submit">Iniciar Sesión</button>
+            </form>
+        </div>      
     </section>
     <section class="seccion" id="seccion_4">
         <h2></h2>
