--- a/dev/index.html
+++ b/dev/index.html
@@ -21,10 +21,8 @@
             </div>
         </div>
         <br>            
-        <div class="registro-container">
-            <h2></h2>
-            
-            <form action="procesar_registro.php" method="post">
+        <div class="registro-container">        
+            <form action="procesar_registro" method="post">
                 <div class="input-group">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" required>
@@ -46,20 +44,34 @@
         </div>
     </section>
     <section class="seccion" id="seccion_3">
+        <div class="inicio">
+            <img src="img/logo.png" alt="">
+        </div>
         <div class="login-container">
             <h2>Iniciar Sesión</h2>
             <form action="procesar_login.php" method="post">
                 <div class="input-group">
-                    <img src="usuario_icono.png" alt="Icono de Usuario" class="icono">
+                    <span class="icon">
+                        <img src="usuario_icono.png" alt="Icono de Usuario">
+                    </span>
                     <input type="text" id="usuario" name="usuario" placeholder="Usuario" required>
                 </div>
                 <div class="input-group">
-                    <img src="contrasena_icono.png" alt="Icono de Contraseña" class="icono">
+                    <span class="icon">
+                        <img src="contrasena_icono.png" alt="Icono de Contraseña">
+                    </span>
                     <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
+                </div>
+                <div class="input-group">
+                    <input type="checkbox" id="recordar" name="recordar">
+                    <label for="recordar">Recordar contraseña</label>
+                </div>
+                <div class="input-group">
+                    <a href="olvidar_contrasena.php">¿Olvidó su contraseña?</a>
                 </div>
                 <button type="submit">Iniciar Sesión</button>
             </form>
-        </div>      
+        </div>
     </section>
     <section class="seccion" id="seccion_4">
         <h2></h2>
