Vista 3 - Inicio de sesion
Se deja la vista terminada

--- a/dev/index.html
+++ b/dev/index.html
@@ -49,16 +49,17 @@
         </div>
         <div class="login-container">
             <h2>Iniciar Sesión</h2>
-            <form action="procesar_login.php" method="post">
+            <br>
+            <form action="procesar_login" method="post">
                 <div class="input-group">
                     <span class="icon">
-                        <img src="usuario_icono.png" alt="Icono de Usuario">
+                        <img src="img/Carta.jpg" alt="Icono de Usuario">
                     </span>
                     <input type="text" id="usuario" name="usuario" placeholder="Usuario" required>
                 </div>
                 <div class="input-group">
                     <span class="icon">
-                        <img src="contrasena_icono.png" alt="Icono de Contraseña">
+                        <img src="img/Carta.jpg" alt="Icono de Contraseña">
                     </span>
                     <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
                 </div>
@@ -67,7 +68,7 @@
                     <label for="recordar">Recordar contraseña</label>
                 </div>
                 <div class="input-group">
-                    <a href="olvidar_contrasena.php">¿Olvidó su contraseña?</a>
+                    <a href="olvidar_contrasena">¿Olvidó su contraseña?</a>
                 </div>
                 <button type="submit">Iniciar Sesión</button>
             </form>
