--- a/dev/index.html
+++ b/dev/index.html
@@ -39,6 +39,7 @@
                     <label for="confirmar_contrasena">Confirmar Contraseña:</label>
                     <input type="password" id="confirmar_contrasena" name="confirmar_contrasena" required>
                 </div>
+                <div class="reg"><img src="img/Carta.jpg" alt=""></div>
                 <button type="submit">Registrarse</button>
             </form>
         </div>
