--- a/dev/index.html
+++ b/dev/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     <section class="seccion" id="seccion_1">
-        <h2></h2>
-        <p></p>
+        <div class="header1">
+            <div class="logo">
+                <img src="img/logo.png" alt="">
+            </div>
+            <div class="ir">
+                <h1>Crear Usuario</h1>
+            </div>
+        </div>
     </section>
     <section class="seccion" id="seccion_2"> 
         <div class="header1">
