--- a/dev/index.html
+++ b/dev/index.html
@@ -82,8 +82,13 @@
         </div>
     </section>
     <section class="seccion" id="seccion_4">
-        <h2></h2>
-        <p></p>
+        <div class="container1">
+            <img src="https://cdn-icons-png.flaticon.com/128/867/867882.png">
+            <div class="contenido">
+            <h1>ASTRUM</h1>
+            </div>
+        </div>
+        
     </section>
     <section class="seccion" id="seccion_5">
         <div class="container1">
