--- a/dev/index.html
+++ b/dev/index.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     <section class="seccion" id="seccion_1">
-        <div class="header1">
+        <div class="header2">
             <div class="logo">
                 <img src="img/logo.png" alt="">
             </div>
             <div class="ir">
-                <h1>Crear Usuario</h1>
+                <a href="" class="btn"><button>Inicio</button></a>
+                <a href="" class="btn"><button>Registro</button></a>
+            </div>
+        </div>
+        <div class="carrusel-container">
+            <div class="slide active">
+                <img src="img/Carta4.jpg" alt="Imagen 1">
+            </div>
+            <div class="slide">
+                <img src="img/Carta2.jpg" alt="Imagen 2">
+            </div>
+            <div class="slide">
+                <img src="img/Carta3.jpg" alt="Imagen 3">
             </div>
         </div>
     </section>
