Creacion de efecto seccion 4
Se realizaron cambios en la vista

--- a/dev/index.html
+++ b/dev/index.html
@@ -100,7 +100,22 @@
             <h1>ASTRUM</h1>
             </div>
         </div>
+        <br>
+        <div class="Lecturas-de-Tarot">
+            <center>
+            <h2>Historia del Tarot</h2>
+        </div> 
+        <div class="texto-con-tooltip">
+            <span class="texto">Texto principal</span>
+            <div class="tooltip">
+                Texto adicional que se muestra cuando el mouse pasa sobre el texto principal.
+            </div>
+        </div>
         
+
+        <div class="contenedor-botones">
+            <button class="botonD"><a href="#seccion_1">Devolver</a></button>
+         </div>
     </section>
     <section class="seccion" id="seccion_5">
         <div class="container1">
