--- a/dev/index.html
+++ b/dev/index.html
@@ -214,10 +214,7 @@
         </div>
         <div class="Lecturas-de-Tarot">
             <center>
-            <h2>Lecturas Tarot</h2>
-            <p class="subtitulo">Un mundo nuevo y ancestral para ti.</p>
-            </center>
-            <a href="#seccion_8">Ir</a>
+            <h2>Guías</h2>
         </div> 
     
         <div class="contenedor-botones">
