--- a/dev/index.html
+++ b/dev/index.html
@@ -132,7 +132,7 @@
         </div> 
         <br>
         <div class="Lecturas-de-Tarot">
-            <h2>Cartas</h2>
+            <h2>Cartas🧙🏼‍♂️</h2>
             <div class="texto-con-tooltip">
                 <span class="texto">Interpretación</span>
                 <div class="tooltip">
