--- a/dev/index.html
+++ b/dev/index.html
@@ -212,11 +212,18 @@
                
             </div>   
         </div>
+        <br>
         <div class="Lecturas-de-Tarot">
-            <center>
-            <h2>Guías</h2>
+            <h2>Guías📖</h2>
+            <div class="texto-con-tooltip">
+                <span class="texto">Observar</span>
+                <div class="tooltip">
+                    Recuerda que practicar regularmente y confiar en tu intuición te ayudará a desarrollar tus habilidades en el tarot con el tiempo. ¡Disfruta del proceso de exploración y descubrimiento que ofrece esta práctica!
+
+                </div>
+            </div>
         </div> 
-    
+        <br>
         <div class="contenedor-botones">
             <button class="botonD"><a href="#seccion_1">Devolver</a></button>
          </div>
