--- a/dev/index.html
+++ b/dev/index.html
@@ -13,8 +13,8 @@
                 <img src="img/logo.png" alt="">
             </div>
             <div class="ir">
-                <a href="" class="btn"><button>Inicio</button></a>
-                <a href="" class="btn"><button>Registro</button></a>
+                <a href="" class="btn"><button><a href="#seccion_3">Inicio</a></button></a>
+                <a href="" class="btn"><button><a href="#seccion_2">Registro</a></button></a>
             </div>
         </div>             
         <div class="carrusel-container">
@@ -72,7 +72,7 @@
                     <input type="password" id="confirmar_contrasena" name="confirmar_contrasena" required>
                 </div>
                 <div class="reg"><img src="img/Carta.jpg" alt=""></div>
-                <button type="submit">Registrarse</button>
+                <button type="submit"><a href="#seccion_5">Registrarse</a></button>
             </form>
         </div>
     </section>
@@ -103,7 +103,7 @@
                 <div class="input-group">
                     <a href="olvidar_contrasena">¿Olvidó su contraseña?</a>
                 </div>
-                <button type="submit">Iniciar Sesión</button>
+                <button type="submit"><a href="#seccion_5">Iniciar Sesión</a></button>
             </form>
         </div>
     </section>
@@ -225,7 +225,7 @@
         </div> 
         <br>
         <div class="contenedor-botones">
-            <button class="botonD"><a href="#seccion_1">Devolver</a></button>
+            <button class="botonD"><a href="#seccion_5">Devolver</a></button>
          </div>
     </section>
     <section class="seccion" id="seccion_5">
