--- a/dev/index.html
+++ b/dev/index.html
@@ -93,7 +93,7 @@
     <section class="seccion" id="seccion_2"> 
         <div class="header1">
             <div class="logo">
-                <img src="img/logo.png" alt="">
+                <a href="#seccion_1"><img src="img/logo.png" alt=""></a>
             </div>
             <div class="crear">
                 <h1>Crear Usuario</h1>
@@ -125,7 +125,8 @@
     </section>
     <section class="seccion" id="seccion_3">
         <div class="inicio">
-            <img src="img/logo.png" alt="">
+            <a href="#seccion_1"><img src="img/logo.png" alt=""></a>
+            
         </div>
         <div class="login-container">
             <h2>Iniciar Sesión</h2>
